welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: not found: value abs
  return abs(100-n) <= 10
         ^